<resources>
    <string name="app_name">BOTTOM</string>
    <string name="home">Home</string>
    <string name="checklist">Checklist</string>
    <string name="note">Note</string>
    <string name="diario">Diario</string>
    <string name="calendario">Calendario</string>
    <string name="focus">Focus</string>
    <string name="task">Task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salva">Save</string>
    <string name="esempio_task"> Task </string>
    <string name="nessuna_scadenza">Nessuna Scadenza</string>
    <string name="da_fare">Da fare</string>
    <string name="vuoi_aggiungere_una_task">Vuoi aggiungere una task?</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="in_scadenza">In scadenza</string>
    <string name="data">Data</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="loggati_per_iniziare_ad_usare_l_app">Loggati per iniziare ad usare l\'app</string>
    <string name="login">LOGIN</string>
    <string name="ricorda">Ricorda</string>
    <string name="hai_bisogno_di_aiuto">Hai bisogno di aiuto?</string>
    <string name="non_hai_un_account">Non hai un account?</string>
    <string name="registrati">Registrati</string>
    <string name="someone_gmail_com">someone@gmail.com</string>
    <string name="password">Password</string>
    <string name="new_task">New Task</string>
    <string name="seleziona_una_data">Seleziona una data</string>
    <string name="oggi_non_hai_scritto_ancora_nulla">Oggi non hai scritto ancora nulla</string>
    <string name="aggiungi_la_tua_giornata">Aggiungi la tua giornata</string>
    <string name="vuoi_aggiungere_una_nota">Vuoi aggiungere una nota?</string>
    <string name="vuoi_aggiungere_un_focus">Vuoi aggiungere un focus?</string>
    <string name="studio">Studio</string>
    <string name="_1h_25">1h 25</string>
    <string name="avvia">Avvia</string>
    <string name="lettura">Lettura</string>
    <string name="_1h">1h</string>
    <string name="oggi">Oggi</string>
    <string name="info_nota">Info</string>
    <string name="back">Back</string>
    <string name="completato">Completato</string>
    <string name="i_tuoi_focus">I tuoi focus</string>
    <string name="cronologia_focus">Cronologia focus</string>
    <string name="ore_di_concentrazione_1">Ore di concentrazione = 1</string>
    <string name="riprendi">Riprendi</string>
    <string name="username">username</string>
    <string name="nome">nome</string>
    <string name="inserisci_nome">inserisci nome</string>
    <string name="cognome">cognome</string>
    <string name="inserisci_cognome">inserisci cognome</string>
    <string name="e_mail">e-mail</string>
    <string name="inserisci_email">inserisci email</string>
    <string name="data_nascita">data nascita</string>
    <string name="inserisci_data_nascita">inserisci data nascita</string>
    <string name="telefono">telefono</string>
    <string name="inserisci_numero_telefono">inserisci numero telefono</string>
    <string name="settings">Settings</string>
    <string name="notifiche">Notifiche</string>
    <string name="privacy">Privacy</string>
    <string name="lingua">Lingua</string>
    <string name="informazioni">Informazioni</string>
    <string name="sicurezza">Sicurezza</string>
    <string name="log_out">Log out</string>
    <string name="titolo_example">Titolo</string>
    <string name="esempio_note">Note</string>
    <string name="text_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="scrivi_qualcosa">Scrivi qualcosa</string>
    <string name="nessuna_data">Nessuna data</string>
    <string name="carica_immagine">Carica immagine</string>
    <string name="oltre_la_settimana">Oltre la settimana</string>
    <string name="scadenza_settimana">In scadenza nella settimana</string>
    <string name="scaduti">Scaduti</string>
    <string name="data_gia_presente">Questa data è gia\' presente nel db</string>
    <string name="data_del_futuro">Non puoi inserire una data del futuro</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="inserisci_i_minuti">Inserisci i minuti</string>
    <string name="set">SET</string>
    <string name="label_registrazione">Registrati per utilizzare l\'app</string>
    <string name="credenziali">Inserisci qui sotto le tue credenziali</string>
    <string name="numero_di_telefono">numero di telefono</string>
    <string name="inserisci_di_nuovo_la_password">Inserisci di nuovo la password</string>
    <string name="email">email</string>
    <string name="account_presente">Hai già un account?</string>
    <string name="accedi">Accedi</string>


</resources>
