<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/benvenuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/benvenuto"
                android:textColor="@color/colorTextWhite"
                android:textSize="36dp" />

            <TextView
                android:id="@+id/labelBenvenuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seg_ui_semibold"
                android:text="@string/label_registrazione"
                android:textColor="@color/colorTextWhite"
                android:textSize="15dp" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/card_background"
        android:elevation="10dp">

        <TextView
            android:id="@+id/Registrati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="@string/registrati"
            android:textColor="@color/colorTextWhite"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/credenziali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="@string/credenziali"
            android:textColor="@color/colorTextWhite"
            android:textSize="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/username"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />


            <EditText
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/nome"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <EditText
                android:id="@+id/cognome"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/cognome"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />


            <EditText
                android:id="@+id/dataNascita"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/data_nascita"
                android:inputType="date"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />


            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/numero_di_telefono"
                android:inputType="phone"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <EditText
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/inserisci_di_nuovo_la_password"
                android:inputType="textPassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/seg_ui_semibold"
                    android:text="@string/hai_bisogno_di_aiuto"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/RegistratiButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Button"
                    android:fontFamily="@font/seg_ui_semibold"
                    android:text="@string/registrati"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="650dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accountPresente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/seg_ui_semibold"
                android:text="@string/account_presente"
                android:textColor="@color/colorTextWhite"
                android:textSize="15dp" />

            <Button
                android:id="@+id/accediBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/accedi"
                android:textColor="@color/Button"
                android:textSize="15dp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>