<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    app:cardElevation="2dp"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/title_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/imgprova"
            app:shapeAppearanceOverlay="@style/RoundCorner"
            />

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/data"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Heading"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:text="@string/titolo_example"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:textSize="10sp"
            android:text="@string/text_example" />


    </LinearLayout>



</androidx.cardview.widget.CardView>

